# splitzipper

./: .gitignore  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
splitzipper/: __init__.py  gui.py  localization.py  unzipper.py  zipper.py
